--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -18,6 +18,13 @@
             </a>
         </div>
     </h5>
+    <h5 class="m-0 p-0 px-2">
+        <div class="col-lg-6 login-btm login-button"> 
+            <a class="btn btn-outline-primary" href="/deleteaccount/{{user}}">
+                Delete account                             
+            </a>
+        </div>
+    </h5>
 <div class="container m-5 p-2 rounded mx-auto bg-light shadow">
     <div class="row m-1 p-4">
         <div class="col">
