--- a/static/admin.css
+++ b/static/admin.css
@@ -169,3 +169,20 @@
   color: darkgray;
   font-size: 14px;
 }
+
+a:visited { 
+  text-decoration: none; 
+  color: white; 
+ }
+
+ a:link 
+ { text-decoration: none; }
+
+a:visited 
+{ text-decoration: none; }
+
+a:hover 
+{ text-decoration: none; }
+
+a:active 
+{ text-decoration: none; }
