--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -53,7 +53,7 @@
             <div class="col col-11 mx-auto">
                 <div class="row bg-white rounded shadow-sm p-2 add-todo-wrapper align-items-center justify-content-center">
                     <div class="col">
-                        <input class="form-control form-control-lg border-0 add-todo-input bg-transparent rounded" type="text" name="task" placeholder="Add new ..">
+                        <input class="form-control form-control-lg border-0 add-todo-input bg-transparent rounded" minlength="1" maxlength="120" type="text" name="task" placeholder="Add new .." >
                     </div>
                     <label for="priority">priority:</label>
                     <select name="priority" id="priority">
