admin can see site's users

--- a/templates/404/404.html
+++ b/templates/404/404.html
@@ -2,8 +2,8 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - 404 Error Example </title>
-  <link rel="stylesheet" href="static/404.css">
+  <title>404</title>
+  <link rel="stylesheet" href="/static/404.css">
 
 </head>
 <body>
