--- a/templates/admin/admin/admin.html
+++ b/templates/admin/admin/admin.html
@@ -27,6 +27,15 @@
   </div>
   <div class='body'>
     <div class='sidebar'>
+      <div class='item'>
+        <i class='material-icons'>
+          settings
+        </i>
+        <span class='text'> <a href="/admin/accounts"> show users account</a></span>
+        <i class='material-icons'>
+          chevron_right
+        </i>
+      </div>
       
       <div class='item'>
         <i class='material-icons'>
@@ -37,6 +46,7 @@
           chevron_right
         </i>
       </div>
+            
       <div class='item'>
         <i class='material-icons'>
           settings
