--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -7,10 +7,11 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge" /><link rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css'>
 <link rel='stylesheet' href='https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&amp;display=swap'>
 <link rel='stylesheet' href='https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css'>
-<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.standalone.min.css'><link rel="stylesheet" href="./style.css">
+<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.standalone.min.css'><link rel="stylesheet" href="styledark.css">
 
 </head>
-<body>
+{% if currentTheme == "light"%}
+<body style="background-color: white;">
     <h5 class="m-0 p-0 px-2">
         <div class="col-lg-6 login-btm login-button"> 
             <a class="btn btn-outline-primary" href="/logout">
@@ -24,6 +25,9 @@
             </a>
             <a class="btn btn-outline-primary" href="/contactm">
                 contact to admin                            
+            </a>
+            <a class="btn btn-outline-primary" href="/changeTheme">
+                Change to Dark                          
             </a>
         </div>
     </h5>
@@ -114,7 +118,116 @@
             </div>
         </div> </ul>
     {%endfor%}
-    
+
+    {%else%}
+    <body style="background-color: black;">
+        <h5 class="m-0 p-0 px-2">
+            <div class="col-lg-6 login-btm login-button"> 
+                <a class="btn btn-outline-primary" href="/logout">
+                    logout                             
+                </a>
+                <a class="btn btn-outline-primary" href="/deleteaccount/{{user}}">
+                    Delete account                             
+                </a>
+                <a class="btn btn-outline-primary" href="/changepassword/{{user}}">
+                    Change password                             
+                </a>
+                <a class="btn btn-outline-primary" href="/contactm">
+                    contact to admin                            
+                </a>
+                <a class="btn btn-outline-primary" href="/changeTheme">
+                    Change to Light                          
+                </a>
+            </div>
+        </h5>
+    <div class="container m-5 p-2 rounded mx-auto bg-light shadow">
+        <div class="row m-1 p-4">
+            <div class="col">
+                <div class="p-1 h1 text-primary text-center mx-auto display-inline-block">
+                    <i class="fa fa-check bg-primary text-white rounded p-2"></i>
+                     welcome {{user}}
+                </div>
+            </div>
+        </div>
+        <form form action="/submittask" method="POST">
+            <div class="row m-1 p-3">
+                <div class="col col-11 mx-auto">
+                    <div class="row bg-white rounded shadow-sm p-2 add-todo-wrapper align-items-center justify-content-center">
+                        <div class="col">
+                            <input class="form-control form-control-lg border-0 add-todo-input bg-transparent rounded" minlength="1" maxlength="120" type="text" name="task" placeholder="task" >
+                            <input class=" form-control-lg border-0 add-todo-input bg-transparent rounded" minlength="1" maxlength="20" type="text" name="category" placeholder="category" >
+                        </div>
+                       
+                        <label for="priority">priority:</label>
+                        <select name="priority" id="priority">
+                            <option value="1">Low</option>
+                            <option value="2">Medium</option>
+                            <option value="3">High</option>
+                          </select>
+                          <br><br>
+                        <div class="col-auto px-0 mx-0 mr-2">   
+                            <button type="submit" class="btn btn-primary">ADD</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="p-2 mx-4 border-black-25 border-bottom"></div>
+        </form>
+        {% for i in range(tasknumber) %}
+        <ul>             <!-- Todo Item 1 -->
+            <div class="row px-3 align-items-center todo-item rounded">
+                <div class="col px-1 m-1 d-flex align-items-center">
+                   {{i+1}} {{tasks[i][1]}}
+                </div>
+                    <div class="col-auto m-1 p-0 px-3 d-none">
+                </div>
+                <div class="col-auto m-1 p-0 todo-actions">
+                    <div class="row d-flex align-items-center justify-content-end">
+                        <h5 class="m-0 p-0 px-2">
+                            <div class="col-lg-6 login-btm login-button"> 
+                                <a class="btn btn-outline-primary" href=#>
+                                    Priority: {{tasks[i][2]}}
+                                </a>
+                            </div>
+                        </h5>
+                        <h5 class="m-0 p-0 px-2">
+                            <div class="col-lg-6 login-btm login-button"> 
+                                <a class="btn btn-outline-primary" href="/edittask/{{user}}/{{tasks[i][0]}}/{{tasks[i][1]}}">
+                                    edit
+                                </a>
+                            </div>
+                        </h5>
+                        <h5 class="m-0 p-0 px-2">
+                            <div class="col-lg-6 login-btm login-button"> 
+                                <a class="btn btn-outline-primary" href="/isdone/{{user}}/{{tasks[i][0]}}/{{tasks[i][3]}}">
+                                    {% if tasks[i][3] == "0" %}
+                                    is un-done
+                                    {%else%}
+                                    is done
+                                    {% endif %}                                
+                                </a>
+                            </div>
+                        </h5>
+                        <h5 class="m-0 p-0 px-2">
+                            <div class="col-lg-6 login-btm login-button"> 
+                                <a class="btn btn-outline-primary" href="/deletetask/{{user}}/{{tasks[i][0]}}">
+                                    delete
+                                </a>
+                            </div>
+                        </h5>
+                        <h5 class="m-0 p-0 px-2">
+                            <div class="col-lg-6 login-btm login-button"> 
+                                <a class="btn btn-outline-primary" href="#">
+                                    {{tasks[i][5]}}
+                                </a>
+                            </div>
+                        </h5>
+                        
+                    </div>
+                </div>
+            </div> </ul>
+        {%endfor%}
+    {%endif%}
 <!-- partial -->
   <script src='https://code.jquery.com/jquery-3.3.1.slim.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js'></script>
